--- a/atendimento/capital/templates/capital/capital.html
+++ b/atendimento/capital/templates/capital/capital.html
@@ -208,7 +208,7 @@
     .agendamento-presencial-hr {
         border: 0;
         height: 2px;
-        background: #E59F3A; /* Cor da linha horizontal */
+        background: #E59F3A; 
         margin-bottom: 20px;
     }
     .btn-enderecos {
@@ -234,7 +234,7 @@
 
 
 <div class="container mt-4 pb-4 content-container">
-    <h1>Capital</h1>
+    <h1>CAPITAL</h1>
     <hr class="agendamento-presencial-hr">
     <p  style="text-align: justify; margin-bottom: 20px; padding: 0 20px;"><strong>Se você reside na Capital e precisa de atendimento da Defensoria Pública do Estado de Pernambuco, em qualquer área de nossa atuação, deve efetuar o seu agendamento por meio do Núcleo de Primeiro Atendimento. </strong></p>
     <p style="text-align: justify; margin-bottom: 20px; padding: 0 20px;"><strong>Você pode obter o seu agendamento se dirigindo presencialmente ao Núcleo de Primeiro Atendimento ou de maneira virtual, tudo de acordo com as instruções abaixo: </strong></p>
