--- a/atendimento/capital/templates/capital/capital_locais.html
+++ b/atendimento/capital/templates/capital/capital_locais.html
@@ -3,144 +3,79 @@
 {% block title %}Capital - Agendamento{% endblock %}
 
 {% block content %}
+
 <style>
-    body {
-        background: linear-gradient(to bottom, #00693c, #ffffff);
-        font-family: 'Arial', sans-serif;
-        margin: 0;
-    }
-
-    .container {
-        width: 81%; 
-        max-width: none; 
-        padding: 20px;
-        margin: auto; 
-    }
-
-    .predio {
-        margin-bottom: 40px;
-    }
-
-
-    .predio h2 {
-        background-color: white;
-        color: #09683c;
-        padding: 15px;
-        border-radius: 8px;
-        font-size: 28px;
-        margin-bottom: 20px;
-        text-transform: uppercase;
-        text-shadow: none;
-        border-left: 8px solid #76ac92;
-        border-bottom: 8px solid #76ac92;
-        position: relative; 
-    }
-
-    .predio h2 span {
-       
-        right: 20px;         
-        top: 50%;            
-        transform: translateY(-50%); 
-        font-size: 18px;    
-        font-weight: normal; 
-        color: #666666;      
-    }
-
-    .nucleo:hover {
-        transform: translateY(-5px); 
-    }
-    
-
-    .nucleos-container {
-        display: flex;
-        flex-wrap: wrap; 
-        justify-content: flex-start; 
-        gap: 20px;
-    }
-
-    .nucleo-card {
-        background-color: #ffffff;
-        padding: 5px;
-        width: calc(33.33% - 40px); 
-        box-sizing: border-box;
-        border-radius: 12px;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;        
-        justify-content: space-between;
-        
-    }
-
-    @media (max-width: 768px) {
-        .nucleo-card {
-            width: calc(50% - 20px); /* Ajuste para 2 colunas em telas menores */
-        }
-    }
-
-    @media (max-width: 480px) {
-        .nucleo-card {
-            width: 100%; /* Ajuste para 1 coluna em telas muito pequenas */
-        }
-    }
-
-    .nucleo-card h3 {
-        color: #09683c;
-        padding: 15px;
-        font-size: 18px;
-        text-shadow: none;
-    }
-
-    .nucleo-card ul {
-        list-style: none;
+    * {
         padding: 0;
         margin: 0;
-        width: 100%;
-        text-shadow: none;
+        box-sizing: border-box;
     }
-
-    .nucleo-card li {
-        font-size: 16px;
-        color: #333;
-        padding: 5px 0;
-        display: flex;
-        align-items: center;
-        text-shadow: none;
+    .body {
+        background-color: beige;
     }
-
-    .nucleo-card li span {
-        margin-left: 10px;
+    .card-img-top {
+        border-radius: 50px;
+        padding: 20px;
     }
-
-    .nucleo-card i {
-        color: #6c757d;
+    .card {
+        border-radius: 35px;
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em,
+                    rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em,
+                    rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+        justify-content: space-between;
+        color: #ccc;
     }
-
+    .card-body {
+        padding: 25px;
+        margin-top: -15px;
+        display: flex; 
+        flex-direction: column;
+        justify-content: flex-start;
+    }
+    .card-sem-imagem {
+        background-color: #36B500; 
+        color: white; 
+    }
+    .card-title {
+        margin-bottom: 10px; 
+    }
     .breadcrumbs {
+        margin-bottom: 30px;
+    }
+    .titulo {
+        background-color: #f9f9f9;
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        margin: 0 auto;
+    }
+    .titulo h2 {
+        font-size: 35px;
+        color: #036635;
+    }
+    .titulo p {
+        font-size: 18px;
+        color: #036635;
+        margin-top: 0;
+        margin-bottom: 0;
+        text-align: left;
+    }
+    ul {
+        list-style-type: none;
+        padding: auto  ;
+        margin: auto;
+        text-align: left;
+    }
+    
+        
+        
+    
+    .agendamento-presencial-hr {
+        border: 0;
+        height: 2px;
+        background: #E59F3A;
         margin-bottom: 20px;
-        font-size: 16px;
-        color: #666666;
-        display: inline-block;
     }
-
-    .breadcrumbs a {
-        color: #96CE00;
-        text-decoration: none;
-        font-weight: bold;
-    }
-
-    .breadcrumbs span {
-        margin: 0 5px;
-    }
-
-    .breadcrumbs a:hover {
-        text-decoration: underline;
-    }
-
-    @media (max-width: 768px) {
-    .nucleo-card {
-        width: calc(50% - 20px); 
-    }
-}
 </style>
 
 <div class="inf">
@@ -155,39 +90,53 @@
         <span>»</span> 
         <span style="color: #96CE00;">Locais De Atendimento</span>
     </div>
-    <h1 style="color: #ffffff; text-align: center; font-size: 25px;">Locais De Atendimento</h1>
-    <div class="container">
-        {% for predio, nucleos in predios.items %}
-            <div class="predio">
-                <h2>{{ predio }} <br>
-                    <span class="endereco " text-align="right";>{{ nucleos.0.endereco }}</span>
-                </h2>
-                <div class="nucleos-container">
-                    {% for nucleo in nucleos %}
-                        <div class="nucleo-card">
-                            <h3>{{ nucleo.nome }}</h3>
-                            <ul>
-                                {% if nucleo.email %}
-                                    <li>
-                                        <i class="fa-solid fa-envelope"></i> <span>{{ nucleo.email }}</span>
-                                    </li>
-                                {% endif %}
-                                {% if nucleo.telefone %}
-                                    <li>
-                                        <i class="fa-solid fa-phone"></i> <span>{{ nucleo.telefone }}</span>
-                                    </li>
-                                {% endif %}
-                                {% if nucleo.horario %}
-                                    <li>
-                                        <i class="fa-solid fa-clock"></i> <span>{{ nucleo.horario }}</span>
-                                    </li>
-                                {% endif %}
-                            </ul>
-                        </div>
-                    {% endfor %}
+    <h1 class="text-center">Locais De Atendimento</h1>
+</div>
+
+{% for predio, nucleos in predios.items %}
+    <div class="container py-5">
+        <div class="titulo">                
+            <h2>{{ predio }}</h2>
+            <P>{{ nucleos.0.endereco }}</P>
+        </div>
+        <hr class="agendamento-presencial-hr">
+        <div class="row row-cols-1 row-cols-md-3 g-4 py-5">
+            {% for nucleo in nucleos %}
+            <div class="col my-2">
+                <div class="card p-1 {% if not nucleo.imagem %}card-sem-imagem{% endif %}" style="min-height: 480px !important;">
+                    {% if nucleo.imagem %}
+                        <img src="{{ nucleo.imagem.url }}" class="card-img-top" alt="">
+                    {% else %}
+                        <div class="card-img-top" style="height: 200px;"></div> 
+                    {% endif %}
+                    <div class="card-body row d-flex align-items-center">
+                        <h5 class="card-title">{{ nucleo.nome }}</h5>
+                        
+                        <ul>
+                            {% if nucleo.email %}
+                            <li>
+                                <i class="fa-solid fa-envelope"></i> <span>{{ nucleo.email }}</span>
+                            </li>
+                            {% endif %}
+                            
+                            {% if nucleo.telefone %}
+                            <li>
+                                <i class="fa-solid fa-phone"></i> <span>{{ nucleo.telefone }}</span>
+                            </li>
+                            {% endif %}
+                            
+                            {% if nucleo.horario %}
+                            <li>
+                                <i class="fa-solid fa-clock"></i> <span>{{ nucleo.horario }}</span>
+                            </li>
+                            {% endif %}
+                        </ul>
+                    </div>
                 </div>
             </div>
-        {% endfor %}
+            {% endfor %}
+        </div>
     </div>
+{% endfor %}
 
 {% endblock %}
