--- a/atendimento/capital/templates/capital/interior.html
+++ b/atendimento/capital/templates/capital/interior.html
@@ -4,75 +4,37 @@
 
 {% block content %}
 <style>
-   .container {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: flex-start; 
-        padding: 10px;
-    }
-
-    .nucleo {
-        background-color: #ededed;
-        margin: 10px; 
-        padding: 20px;
-        flex: 1 1 calc(33% - 20px); 
-        max-width: calc(33% - 20px); 
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        min-width: 250px; 
-        border-radius: 8px;
-        align-items: center;
-        box-shadow: 0px 4px 8px rgba(0,0,0,0.1);
-        transition: transform 0.3s; 
-    }
-    .nucleo:hover {
-        transform: translateY(-5px); 
-    }
-
-    .nucleo h2 {
-        color: #09683c;
-        font-size: 25px;
-        margin: 0;
-        margin-bottom: 15px; 
-        text-shadow: none;
-        text-align: center;
-    }
-    
-    .nucleo ul {
-        list-style-type: none;
+    *{
         padding: 0;
         margin: 0;
-        display: flex;
-        flex-wrap: wrap; 
-        gap: 10px; 
-        text-shadow: none;
+        box-sizing: border-box;
     }
-    
-    .nucleo span {
-        color: #000000;
-        text-shadow: none;
+    .body{
+        background-color: beige;    
     }
-    
-    .nucleo li {
-        display: flex;
-        flex: 1 1 50%; 
+    .card-img-top{
+        border-radius: 50px;
+        padding: 20px;
+    }
+    .card{
+        border-radius:35px;
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+        justify-content: space-between;
+        color: #ccc;      
+    }
+    .card-sem-imagem {
+        background-color: #36B500; 
+        color: white; 
+    }
+    .card-body{
         align-items: center;
-        font-size: 12px;
-        color: #7fae00;
-        text-shadow: none;
+        padding: 25px;
+        margin-top: -15px;
     }
-    
-    .nucleo i {
-        margin-right: 10px;
-        text-shadow: none;
+
+    .breadcrumbs {
+        margin-bottom: 30px; 
     }
-     
-    .nucleo strong {
-        margin-right: 5px; 
-        text-shadow: none;
-    }
-    
     form {
         display: flex;
         align-items: center;
@@ -115,80 +77,84 @@
     button:hover {
         background-color: #218838;
     }
-    
+    ul {
+        list-style-type: none;
+        padding: auto  ;
+        margin: auto;
+        text-align: left;
+    }
 </style>
+
 <div class="inf">
-    <div class="container p-3 d-flex justify-content-center align-items-center" style="font-size: 15px;">
-        <div>
-            <div>
-                <div class="elementor-widget-container">
-                    <p class="p-0 mb-2">                 
-                        <span>
-                            <a href="https://www.defensoria.pe.def.br/" id="link" class="text-decoration-none">Início</a>
-                        </span> 
-                        <span style="color: #96CE00;">»</span> 
-                        <a href="{% url 'Home' %}" id="link" class="text-decoration-none">Atendimento</a>
-                        <span style="color: #96CE00;">»</span> 
-                        <a href="{% url 'interior_home' %}" id="link" class="text-decoration-none">Interior</a>
-                        <span style="color: #96CE00;">»</span> 
-                        <span class="" aria-current="page" style="color: #96CE00;">Locais de Atendimento</span>
-                    </p>        
+    <div class="breadcrumbs">
+        <span>
+            <a href="https://www.defensoria.pe.def.br/" id="link" class="text-decoration-none">Início</a>
+        </span> 
+        <span style="color: #96CE00;">»</span> 
+        <a href="{% url 'Home' %}" id="link" class="text-decoration-none">Atendimento</a>
+        <span style="color: #96CE00;">»</span> 
+        <a href="{% url 'interior_home' %}" id="link" class="text-decoration-none">Interior</a>
+        <span style="color: #96CE00;">»</span> 
+        <span class="" aria-current="page" style="color: #96CE00;">Locais de Atendimento</span>
+    </div>
+    <h1 class="text-center">Locais De Atendimento</h1>
+</div>
+
+<div class="container py-5">
+    <form method="get" action="">
+        <label for="comarca">Filtrar por Cidade:</label>
+        <select id="comarca" name="comarca">
+            <option value="">Todas as Cidades</option>
+            {% for comarca in comarcas %}
+                <option value="{{ comarca.id }}" {% if comarca.id == request.GET.comarca %}selected{% endif %}>
+                    {{ comarca.nome }}
+                </option>
+            {% endfor %}
+        </select>
+        <button type="submit">Filtrar</button>
+    </form> 
+</div>
+
+<div class="container py-5">
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+        {% for nucleo in nucleos %}
+        <div class="col my-2">
+            <div class="card p-1 {% if not nucleo.imagem %}card-sem-imagem{% endif %}" style="min-height: 480px !important;">
+                {% if nucleo.imagem %}
+                    <img src="{{ nucleo.imagem.url }}" class="card-img-top" alt="">
+                {% else %}
+                    <div class="card-img-top" style="height: 200px;"></div> 
+                {% endif %}
+                <div class="card-body row d-flex align-items-center">
+                    <div>
+                        <h4 class="card-title ">{{ nucleo.nome }}</h4>
+                    </div>
+
+                    <div>
+                        <ul>
+                            {% if nucleo.email %}
+                            <li>
+                                <i class="fa-solid fa-envelope"></i> <span>{{ nucleo.email }}</span>
+                            </li>
+                            {% endif %}
+                            
+                            {% if nucleo.telefone %}
+                            <li>
+                                <i class="fa-solid fa-phone"></i> <span>{{ nucleo.telefone }}</span>
+                            </li>
+                            {% endif %}
+                            
+                            {% if nucleo.horario %}
+                            <li>
+                                <i class="fa-solid fa-clock"></i> <span>{{ nucleo.horario }}</span>
+                            </li>
+                            {% endif %}
+                        </ul>
+                    </div>
                 </div>
-            </div>
-            <h1>Locais De Atendimento </h1>
-            <br>
-            <form method="get" action="">
-                <label for="comarca">Filtrar por Cidade:</label>
-                <select id="comarca" name="comarca">
-                    <option value="">Todas as Cidades</option>
-                    {% for comarca in comarcas %}
-                        <option value="{{ comarca.id }}" {% if comarca.id == request.GET.comarca %}selected{% endif %}>
-                            {{ comarca.nome }}
-                        </option>
-                    {% endfor %}
-                </select>
-                <button type="submit">Filtrar</button>
-            </form>
-            <br>
-            <div class="container">
-                {% for nucleo in nucleos %}
-                <div class="nucleo">
-                    <h2>{{ nucleo.nome }}</h2>
-                    <ul>
-                        {% if nucleo.predio %}
-                        <li>
-                            <i class="fa-solid fa-building"></i> <span> {{ nucleo.predio }}</span>
-                        </li>
-                        {% endif %}
-
-                        {% if nucleo.endereco %}
-                        <li>
-                            <i class="fa-solid fa-location-dot"></i> <span> {{ nucleo.endereco }}</span>
-                        </li>
-                        {% endif %}
-
-                        {% if nucleo.email %}
-                        <li>
-                            <i class="fa-solid fa-envelope"></i> <span> {{ nucleo.email }}</span>
-                        </li>
-                        {% endif %}
-
-                        {% if nucleo.telefone %}
-                        <li>
-                            <i class="fa-solid fa-phone"></i> <span> {{ nucleo.telefone }}</span>
-                        </li>
-                        {% endif %}
-
-                        {% if nucleo.horario %}
-                        <li>
-                            <i class="fa-solid fa-clock"></i> <span> {{ nucleo.horario }}</span>
-                        </li>
-                        {% endif %}
-                    </ul>
-                </div>
-                {% endfor %}
             </div>
         </div>
+        {% endfor %}
     </div>
 </div>
 
