--- a/atendimento/capital/templates/capital/regiao_metropolitana.html
+++ b/atendimento/capital/templates/capital/regiao_metropolitana.html
@@ -4,191 +4,151 @@
 
 {% block content %}
 <style>
-    .container {
-         display: flex;
-         flex-wrap: wrap;
-         justify-content: flex-start; 
-         padding: 10px;
-         width: 81%; 
-         max-width: none; 
-         margin: auto; 
-     }
- 
-     .nucleo {
-         background-color: #ededed;
-         margin: 10px; 
-         padding: 20px;
-         flex: 1 1 350px; 
-         display: flex;
-         flex-direction: column;
-         justify-content: space-between;
-         border-radius: 8px;
-         align-items: center;
-         box-shadow: 0px 4px 8px rgba(0,0,0,0.1);
-         transition: transform 0.3s;  
-     }
-     
-     .nucleo:hover {
-        transform: translateY(-5px); 
+    *{
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
     }
-     .nucleo h2 {
-         color: #09683c;
-         font-size: 25px;
-         margin: 0;
-         margin-bottom: 15px; 
-         text-shadow: none;
-         text-align: center;
-     }
-     
-     .nucleo ul {
-         list-style-type: none;
-         padding: 0;
-         margin: 0;
-         display: flex;
-         flex-wrap: wrap; 
-         gap: 10px; 
-         text-shadow: none;
-     }
-     
-     .nucleo span {
-         color: #000000;
-         text-shadow: none;
-     }
-     
-     .nucleo li {
-         display: flex;
-         flex: 1 1 50%; 
-         align-items: center;
-         font-size: 12px;
-         color: #7fae00;
-         text-shadow: none;
-     }
-     
-     .nucleo i {
-         margin-right: 10px;
-         text-shadow: none;
-     }
-      
-     .nucleo strong {
-         margin-right: 5px; 
-         text-shadow: none;
-     }
-     
-     form {
-         display: flex;
-         align-items: center;
-         justify-content: space-between;
-         background-color: #f9f9f9;
-         padding: 10px;
-         border-radius: 8px;
-         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-         max-width: 800px;
-         margin: 0 auto;
-     }
-     
-     label {
-         color: #033a23;
-         margin-right: 10px;
-         white-space: nowrap;
-         text-shadow: none;
-     }
-     
-     select {
-         flex: 1;
-         padding: 10px;
-         margin-right: 20px;
-         border: 1px solid #ccc;
-         border-radius: 5px;
-         font-size: 16px;
-     }
-     
-     button {
-         background-color: #28a745;
-         color: #fff;
-         padding: 10px 15px;
-         border: none;
-         border-radius: 5px;
-         cursor: pointer;
-         font-size: 16px;
-         transition: background-color 0.3s ease;
-     }
-     
-     button:hover {
-         background-color: #218838;
-     }
-     
- </style>
+    .body{
+        background-color: beige;    
+    }
+    .card-img-top{
+        border-radius: 50px;
+        padding: 20px;
+    }
+    .card{
+        border-radius:35px;
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+        justify-content: space-between;
+        color: #ccc;      
+    }
+    .card-sem-imagem {
+        background-color: #36B500; 
+        color: white; 
+    }
+    .card-body{
+        padding: 25px;
+        margin-top: -15px;
+    }
+
+    .breadcrumbs {
+        margin-bottom: 30px; 
+    }
+    form {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        background-color: #f9f9f9;
+        padding: 10px;
+        border-radius: 8px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        max-width: 800px;
+        margin: 0 auto;
+    }
+    
+    label {
+        color: #033a23;
+        margin-right: 10px;
+        white-space: nowrap;
+        text-shadow: none;
+    }
+    
+    select {
+        flex: 1;
+        padding: 10px;
+        margin-right: 20px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        font-size: 16px;
+    }
+    
+    button {
+        background-color: #28a745;
+        color: #fff;
+        padding: 10px 15px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        font-size: 16px;
+        transition: background-color 0.3s ease;
+    }
+    
+    button:hover {
+        background-color: #218838;
+    }
+    ul {
+        list-style-type: none; 
+        padding: 0; 
+        margin: 0;  
+    }
+</style>
 <div class="inf">
-    <div class="container p-3 d-flex justify-content-center align-items-center" style="font-size: 15px;">
-        <div>
-            <div>
-                <div class="elementor-widget-container">
-                    <p class="p-0 mb-2">                 
-                        <span>
-                            <a href="https://www.defensoria.pe.def.br/" id="link" class="text-decoration-none">Início</a>
-                        </span> 
-                        <span style="color: #96CE00;">»</span> 
-                        <a href="{% url 'Home' %}" id="link" class="text-decoration-none">Atendimento</a>
-                        <span style="color: #96CE00;">»</span> 
-                        <span class="" aria-current="page" style="color: #96CE00;">Região Metropolitana</span>
-                    </p>        
+    <div class="breadcrumbs">     
+        <span>
+            <a href="https://www.defensoria.pe.def.br/" id="link" class="text-decoration-none">Início</a>
+        </span> 
+        <span style="color: #96CE00;">»</span> 
+        <a href="{% url 'Home' %}" id="link" class="text-decoration-none">Atendimento</a>
+        <span style="color: #96CE00;">»</span> 
+        <span class="" aria-current="page" style="color: #96CE00;">Região Metropolitana</span>
+    </div>
+    <h1 class="text-center">Locais De Atendimento</h1>
+</div>
+<div class="container py-5">
+    <form method="get" action="">
+        <label for="comarca">Filtrar por Cidade:</label>
+        <select id="comarca" name="comarca">
+            <option value="">Todas as Cidades</option>
+            {% for comarca in comarcas %}
+                <option value="{{ comarca.id }}" {% if comarca.id == request.GET.comarca %}selected{% endif %}>
+                    {{ comarca.nome }}
+                </option>
+            {% endfor %}
+        </select>
+        <button type="submit">Filtrar</button>
+    </form> 
+</div>
+
+<div class="container py-5">
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+        {% for nucleo in nucleos %}
+        <div class="col my-2">
+            <div class="card p-1 {% if not nucleo.imagem %}card-sem-imagem{% endif %}" style="min-height: 480px !important;">
+                {% if nucleo.imagem %}
+                    <img src="{{ nucleo.imagem.url }}" class="card-img-top" alt="">
+                {% else %}
+                    <div class="card-img-top" style="height: 200px;"></div> 
+                {% endif %}
+                <div class="card-body row d-flex align-items-between">
+                    <div>
+                        <h4 class="card-title">{{ nucleo.nome }}</h4>
+                    </div>
+
+                    <div>
+                        <ul>
+                            {% if nucleo.email %}
+                            <li>
+                                <i class="fa-solid fa-envelope"></i> <span>{{ nucleo.email }}</span>
+                            </li>
+                            {% endif %}
+                            
+                            {% if nucleo.telefone %}
+                            <li>
+                                <i class="fa-solid fa-phone"></i> <span>{{ nucleo.telefone }}</span>
+                            </li>
+                            {% endif %}
+                            
+                            {% if nucleo.horario %}
+                            <li>
+                                <i class="fa-solid fa-clock"></i> <span>{{ nucleo.horario }}</span>
+                            </li>
+                            {% endif %}
+                        </ul>
+                    </div>
                 </div>
-            </div>
-            <h1>Locais De Atendimento </h1>
-            <br>
-            <form method="get" action="">
-                <label for="comarca">Filtrar por Cidade:</label>
-                <select id="comarca" name="comarca">
-                    <option value="">Todas as Cidades</option>
-                    {% for comarca in comarcas %}
-                        <option value="{{ comarca.id }}" {% if comarca.id == request.GET.comarca %}selected{% endif %}>
-                            {{ comarca.nome }}
-                        </option>
-                    {% endfor %}
-                </select>
-                <button type="submit">Filtrar</button>
-            </form>
-            <br>
-            
-            <div class="container">
-                {% for nucleo in nucleos %}
-                <div class="nucleo">
-                    <h2>{{ nucleo.nome }}</h2>
-                    <ul>
-                        {% if nucleo.predio %}
-                        <li>
-                            <i class="fa-solid fa-building"></i> <span> {{ nucleo.predio }}</span>
-                        </li>
-                        {% endif %}
-
-                        {% if nucleo.endereco %}
-                        <li>
-                            <i class="fa-solid fa-location-dot"></i> <span> {{ nucleo.endereco }}</span>
-                        </li>
-                        {% endif %}
-
-                        {% if nucleo.email %}
-                        <li>
-                            <i class="fa-solid fa-envelope"></i> <span> {{ nucleo.email }}</span>
-                        </li>
-                        {% endif %}
-
-                        {% if nucleo.telefone %}
-                        <li>
-                            <i class="fa-solid fa-phone"></i> <span> {{ nucleo.telefone }}</span>
-                        </li>
-                        {% endif %}
-
-                        {% if nucleo.horario %}
-                        <li>
-                            <i class="fa-solid fa-clock"></i> <span> {{ nucleo.horario }}</span>
-                        </li>
-                        {% endif %}
-                    </ul>
-                </div>
-                {% endfor %}
             </div>
         </div>
+        {% endfor %}
     </div>
 </div>
 
