Atualização de templates

--- a/atendimento/capital/static/css/cards.css
+++ b/atendimento/capital/static/css/cards.css
@@ -11,16 +11,14 @@ body {
 body{
     background-color:#eee;
 }
-.card {
+/* .card {
     background:linear-gradient(180deg, #7FAE00C9 0%, #06663AC2 100%);
     border: none !important;
-     border-radius:35px;
+    border-radius:35px;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px !important
-}
+} */
 
-.card:hover {
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px !important
-}
+
 
 
 
