--- a/atendimento/capital/templates/capital/list.html
+++ b/atendimento/capital/templates/capital/list.html
@@ -3,6 +3,14 @@
 {% block title%}HOME {% endblock %}
 
 {% block content %}
+<style>
+    .card {
+    background:linear-gradient(180deg, #7FAE00C9 0%, #06663AC2 100%);
+    border: none !important;
+    border-radius:35px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px !important
+}
+</style>>
 <div class="inf">
         <div class="container p-2 d-flex justify-content-center align-items-center" style="font-size: 15px;">
             <div>
