Atualização dos button

--- a/atendimento/capital/templates/capital/capital.html
+++ b/atendimento/capital/templates/capital/capital.html
@@ -80,11 +80,6 @@
         width: auto; 
     }
 
-    .content-container .agendamento-virtual a i, 
-    .content-container .btn-enderecos a i {
-        margin-right: 8px; 
-        font-size: 18px; /* Tamanho do ícone */
-    }
 
     .content-container .agendamento-virtual p {
         font-size: 14px;
@@ -99,12 +94,7 @@
         font-size: 18px; 
     }
 
-    .content-container .btn-enderecos {
-        text-align: center;
-        width: 100%;
-        margin-top: 20px;
-    }
-
+   
     .content-container .btn-enderecos a {
         text-align: center;
         background-color: #6BC477;
@@ -121,7 +111,7 @@
         font-size: 18px;
     }
 
-    /* Estilos específicos para a div agendamento-virtual */
+    
     .agendamento-virtual {
         padding: 15px;
         margin-bottom: 20px;
@@ -135,8 +125,8 @@
     }
 
     .agendamento-virtual a {
-        display: inline-flex; /* Ajusta para alinhar ícone e texto no centro */
-        align-items: center; /* Alinha verticalmente o ícone e o texto */
+        display: inline-flex;
+        align-items: center; 
         background-color: #0804c4;
         color: #ffffff;
         padding: 10px 15px;
@@ -147,8 +137,8 @@
     }
 
     .agendamento-virtual a i {
-        margin-right: 8px; /* Espaçamento entre o ícone e o texto */
-        font-size: 18px; /* Tamanho do ícone */
+        margin-right: 8px; 
+        font-size: 18px; 
     }
 
     .agendamento-virtual p {
@@ -211,23 +201,7 @@
         background: #E59F3A; 
         margin-bottom: 20px;
     }
-    .btn-enderecos {
-        text-align: left; /* Alinha o conteúdo à esquerda */
-        width: 100%;
-        margin-top: 20px;
-    }
-
-    .btn-enderecos a {
-        text-align: left; /* Alinha o texto do botão à esquerda */
-        background-color: #6BC477;
-        color: #ffffff;
-        padding: 15px 0;
-        border-radius: 5px;
-        text-decoration: none;
-        font-size: 16px;
-        width: auto;
-        display: inline-block;
-    }
+  
 </style>
 
 
