--- a/atendimento/capital/templates/capital/interior.html
+++ b/atendimento/capital/templates/capital/interior.html
@@ -62,6 +62,7 @@
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         max-width: 800px;
         margin: 0 auto;
+        align-items: center;
     }
     
     label {
@@ -80,17 +81,6 @@
         font-size: 16px;
     }
     
-    button {
-        background-color: #28a745;
-        color: #fff;
-        padding: 10px 15px;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        font-size: 16px;
-        transition: background-color 0.3s ease;
-    }
-    
     button:hover {
         background-color: #218838;
     }
@@ -100,6 +90,8 @@
         margin: auto;
         text-align: left;
     }
+
+    
 </style>
 
 <div class="inf">
@@ -128,7 +120,7 @@
                 </option>
             {% endfor %}
         </select>
-        <button type="submit">Filtrar</button>
+        <button class="btn btn-success" type="submit">Filtrar</button>
     </form> 
 </div>
 
